--- a/app/src/main/res/layout/popup_regist.xml
+++ b/app/src/main/res/layout/popup_regist.xml
@@ -15,7 +15,7 @@
         android:layout_centerHorizontal="true">
 
         <TextView
-            android:id="@+id/tv_type"
+            android:id="@+id/tv_participation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -97,7 +97,7 @@
                     android:textColor="@color/focusText" />
 
                 <TextView
-                    android:id="@+id/tv_serial"
+                    android:id="@+id/tv_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -120,7 +120,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/tv_class"
+                        android:id="@+id/tv_division"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
@@ -129,7 +129,7 @@
                         android:textColor="@color/focusText" />
 
                     <TextView
-                        android:id="@+id/tv_corps"
+                        android:id="@+id/tv_temper"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
@@ -152,6 +152,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/tv_question"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
@@ -164,6 +165,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_buttons"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
