최초등록 기능 추가 코드 정리 및 일부 warning 처리

--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -32,17 +32,15 @@
             android:layout_toEndOf="@+id/bt_back_layout"
             android:layout_marginStart="5dp"
             android:layout_centerVertical="true"
-            android:text="관람 현황"
+            android:text="@string/check_str"
             android:textSize="24sp"
             android:fontFamily="@font/m_gothic_extrabold"/>
     </RelativeLayout>
 
-    <LinearLayout
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/menubar">
-        <!--android:layout_below="@id/title_login" >-->
-
-    </LinearLayout>
+        android:background="@color/menubar"
+        android:layout_below="@id/title_check" />
 
 </RelativeLayout>
