--- a/app/src/main/res/layout/popup_regist.xml
+++ b/app/src/main/res/layout/popup_regist.xml
@@ -39,7 +39,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="성함 : "
+                    android:text="@string/name_popup_str"
                     android:textSize="16sp"
                     android:fontFamily="@font/m_gothic_normal"
                     android:textColor="@color/unfocusText" />
@@ -48,7 +48,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="군번 : "
+                    android:text="@string/number_popup_str"
                     android:textSize="16sp"
                     android:fontFamily="@font/m_gothic_normal"
                     android:textColor="@color/unfocusText" />
@@ -57,7 +57,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="휴대폰 : "
+                    android:text="@string/phone_popup_str"
                     android:textSize="16sp"
                     android:fontFamily="@font/m_gothic_normal"
                     android:textColor="@color/unfocusText" />
@@ -66,7 +66,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="소속 : "
+                    android:text="@string/temper_popup_str"
                     android:textSize="16sp"
                     android:fontFamily="@font/m_gothic_normal"
                     android:textColor="@color/unfocusText" />
@@ -75,7 +75,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="행선지 : "
+                    android:text="@string/destination_popup_str"
                     android:textSize="16sp"
                     android:fontFamily="@font/m_gothic_normal"
                     android:textColor="@color/unfocusText" />
@@ -156,7 +156,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:text="정확히 입력하셨나요?"
+            android:text="@string/question_popup_str"
             android:textAlignment="center"
             android:textSize="20sp"
             android:fontFamily="@font/m_gothic_bold"
@@ -177,7 +177,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#FAC9C6"
-            android:text="아니요"
+            android:text="@string/cancel_str"
             android:onClick="onClick"/>
         <Button
             android:id="@+id/bt_apply"
@@ -185,7 +185,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#91CFFF"
-            android:text="네"
+            android:text="@string/apply_str"
             android:onClick="onClick"/>
     </LinearLayout>
 
