--- a/app/src/main/res/layout/activity_normal.xml
+++ b/app/src/main/res/layout/activity_normal.xml
@@ -50,12 +50,20 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:id="@+id/content_normal"
-        android:layout_marginTop="70dp">
+        android:layout_marginTop="40dp">
+
+        <Chronometer
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/chronometer"
+            android:textSize="50dp"
+            android:gravity="center"/>
 
         <RelativeLayout
             android:id="@+id/map_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp">
 
         </RelativeLayout>
 
