로그인, 내 정보 확인 추가 - 로그인 할 때 정보 받아와서 'SharedPreferences'로 저장 - 앱 실행시 전시관 오픈 상태(exhibitionState), 전시관 QR 코드 정보(exhibitionQrCode) 받아와서 MainActivity 내부 변수에 저장

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,30 +93,6 @@
             android:onClick="onClick"
             android:text="@string/registration_str"/>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@+id/bt_open_map"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="40dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="센터 허가 완료"
-                    android:textSize="20sp"/>
-
-                <Switch
-                    android:id="@+id/sw_test"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp" />
-
-            </LinearLayout>
     </RelativeLayout>
 
 
@@ -174,6 +150,7 @@
             android:layout_marginStart="30dp"
             android:textSize="24sp"
             android:textAlignment="viewStart"
+            android:textAllCaps="false"
             android:fontFamily="@font/m_gothic_bold"
             android:textColor="@color/focusText"
             android:background="@color/transparent"/>
