--- a/app/src/main/res/layout/popup_map.xml
+++ b/app/src/main/res/layout/popup_map.xml
@@ -2,24 +2,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="bottom">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="-20dp">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         app:srcCompat="@drawable/edit" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/QRbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginStart="300dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="110dp"
         android:background="#673AB7"
+        android:onClick="QRClick"
         android:text="QR" />
 
     <EditText
@@ -29,7 +31,9 @@
         android:ems="15"
         android:layout_marginTop="10dp"
         android:layout_marginStart="140dp"
-        android:inputType="textPersonName"
+        android:inputType="text"
+        android:background="@null"
+        android:textSize="20sp"
         android:text="건물이름" />
 
     <EditText
@@ -37,8 +41,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="15"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50dp"
         android:layout_marginStart="140dp"
-        android:inputType="textPersonName"
-        android:text="간단 설명" />
+        android:inputType="text"
+        android:background="@null"
+        android:textSize="12sp"
+        android:text="시간" />
 </RelativeLayout>
