--- a/app/src/main/res/layout/activity_normal.xml
+++ b/app/src/main/res/layout/activity_normal.xml
@@ -41,7 +41,8 @@
             android:id="@+id/TimeButton"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_marginLeft="160dp"
+
+            android:layout_centerHorizontal="true"
             android:text="Time"
             android:background="@drawable/round_button"
             android:onClick="timeOn"/>
